[project]
name = "sphinx-test"  # REQUIRED, is the only field that cannot be marked as dynamic.

dependencies = [
  "bluesky",
  "ophyd-async[ca]",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pyright",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pyqt6",  # For dev testing with matplotlib's qt backend.
]
doc = [
    "sphinx", 
    "sphinx_rtd_theme", 
    "myst_parser",
]
